# flake8-file-encoding

./: .gitignore  .pre-commit-config.yaml  .travis.yml  README.md  README.rst  pyproject.toml  tox.ini
flake8_file_encoding/: __init__.py
tests/: test_flake8_file_encoding.py
tests/data/: open_binary.py  open_binary_with_named_mode.py  open_method.py  open_with_bad_encoding_type.py  open_with_bad_mode_type.py  open_with_encoding.py  open_with_encoding_and_default_mode.py  open_with_filename_only.py  open_with_positional_encoding.py  open_without_encoding.py  two_open_errors.py
