[tool.poetry]
name = "flake8-file-encoding"
version = "0.1.0"
description = "A Flake8 plugin to check for files opened without an explicit encoding"
readme = "README.rst"
authors = ["Jack Taylor <rayjolt@gmail.com>"]
license = "MIT"
homepage = "https://github.com/rayjolt/flake8-file-encoding"
keywords = "flake8 file open encoding"
classifiers=[
    'Environment :: Console',
    'Intended Audience :: Developers',
    'Operating System :: OS Independent',
    'License :: OSI Approved :: MIT License',
    'Programming Language :: Python',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.7',
    'Topic :: Software Development :: Libraries :: Python Modules',
    'Topic :: Software Development :: Quality Assurance',
    'Framework :: Flake8',
]

[tool.poetry.dependencies]
python = "^3.7"
flake8 = "^3.7"

[tool.poetry.dev-dependencies]
pytest = "^3.0"
black = {version = "^18.3-alpha.0",allows-prereleases = true}

[tool.poetry.plugins."flake8.extension"]
FEN = "flake8_file_encoding:EncodingChecker"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
