[tool.poetry]
name = "flake8-file-encoding"
version = "0.1.0"
description = "A Flake8 plugin to check for files opened without an explicit encoding"
readme = "README.md"
authors = ["Jack Taylor <rayjolt@gmail.com>"]
license = "MIT"
homepage = "https://github.com/rayjolt/flake8-file-encoding"
keywords = ["flake8", "file", "open", "encoding"]
classifiers=[
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.5",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Quality Assurance",
    "Framework :: Flake8",
]

[tool.poetry.dependencies]
python = "^3.5"
flake8 = ">=3"
setuptools = ">=3.3"

[tool.poetry.dev-dependencies]
pytest = "^3"
pre-commit = "^1.17"
tox = "^3.12"
tox-travis = "^0.12.0"

[tool.poetry.plugins."flake8.extension"]
FEN = "flake8_file_encoding:EncodingChecker"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
